--- a/tabs/tabs.css
+++ b/tabs/tabs.css
@@ -11,6 +11,7 @@ nav {
 }
 
 nav ul li {
+  list-style: none;
   float: left;
   border-top-left-radius: 0.75em;
   border-top-right-radius: 0.75em;
@@ -30,6 +31,9 @@ nav ul li.selected {
   color: #333;
 }
 
+nav li.current-target {
+    margin-right: 4em;
+}
 
 h1 {
   clear: both;
