--- a/qtalk/css/quantumtalk.css
+++ b/qtalk/css/quantumtalk.css
@@ -1,10 +1,20 @@
-/*.qubit-circle {*/
-    /*height: 2em;*/
-    /*width: 2em;*/
-    /*background-color: #add8e6;*/
 
-    /*-webkit-border-radius: 1em;*/
-    /*-moz-border-radius: 1em;*/
-    /*border-radius: 1em;*/
-/*}*/
+.peekingEye {
+    position: absolute;
+    top: 7em;
+    left: 12em;
+    height: 2em;
+    margin: 0 !important;
+    border: none !important;
+    -webkit-border-radius: 0.8em;
+    -moz-border-radius: 0.8em;
+    border-radius: 0.8em;
+}
 
+#peekingEye {
+    display: none;
+}
+
+button {
+    font-size: 0.8em;
+}
