--- a/qtalk/css/quantumtalk.css
+++ b/qtalk/css/quantumtalk.css
@@ -1,4 +1,3 @@
-
 .reveal h1 {
     font-size: 3em;
     margin-bottom: 1em;
@@ -22,7 +21,7 @@ button {
 }
 
 .amplitudeCircle {
-    fill: #add8e6;
+    fill: hsla(195, 53%, 60%, 0.5);
 }
 
 .phaseLine {
