--- a/qtalk3/qtalk.css
+++ b/qtalk3/qtalk.css
@@ -11,6 +11,15 @@ footer {
 
 h1, h2 {
     color: #25378B;
+    font-weight: bold;
+}
+
+h1 {
+    font-size: 150%;
+}
+
+h2 {
+    font-size: 120%;
 }
 
 .help {
@@ -21,6 +30,10 @@ h1, h2 {
     border-color: hsla(195, 53%, 60%, 0.5);
     background-color: hsla(195, 53%, 60%, 0.5);
     border-radius: 0.5em;
+}
+
+.titleImage {
+    float: right;
 }
 
 .labelledImage {
