Fix a few issues found by the w3c html validator.

--- a/qtalk3/qtalk.css
+++ b/qtalk3/qtalk.css
@@ -36,6 +36,14 @@ h2 {
     float: right;
 }
 
+.largeImage {
+    width: 80%;
+}
+
+.mediumImage {
+    width: 50%;
+}
+
 .labelledImage {
     display: inline-block;
 }
