Finish Deutch's Algorithm

--- a/qtalk3/qtalk.css
+++ b/qtalk3/qtalk.css
@@ -110,3 +110,11 @@ h2 {
 .hidden {
     display: none;
 }
+
+button[data-step], [data-step] button{
+    font-weight: bold;
+}
+
+[data-step][disabled], [data-step] [disabled] {
+    font-weight: lighter;
+}
