working on article

--- a/qtalk3/qtalk.css
+++ b/qtalk3/qtalk.css
@@ -115,6 +115,6 @@ button[data-step], [data-step] button{
     font-weight: bold;
 }
 
-[data-step][disabled], [data-step] [disabled] {
+[data-step]:disabled, [data-step] :disabled {
     font-weight: lighter;
 }
