Replace spin up/down images with svg.

--- a/qtalk3/main.css
+++ b/qtalk3/main.css
@@ -56,6 +56,10 @@ h2 {
     text-align: center;
 }
 
+.attributions {
+    font-size: 80%;
+}
+
 .animatedQubitsAmplitudeCircle {
     fill: hsla(195, 53%, 60%, 0.5);
 }
