--- a/qtalk3/main.css
+++ b/qtalk3/main.css
@@ -19,16 +19,16 @@ footer {
     font-size: 80%;
 }
 
-h1, h2 {
+h1, h2, h3 {
     color: #25378B;
     font-weight: bold;
 }
 
-h1 {
+h1, h2 {
     font-size: 150%;
 }
 
-h2 {
+h3 {
     font-size: 120%;
 }
 
